--- a/carreras-catalogo.html
+++ b/carreras-catalogo.html
@@ -53,15 +53,37 @@
                 <div class="footer-column">
                     <h3>Sobre nosotros</h3>
                     <ul>
-                        <li><a href="#">Nuestra misión</a></li>
-                        <li><a href="#">Equipo</a></li>
+                        <li><a href="nuestra-mision.html">Nuestra misión</a></li>
+                        <li><a href="equipo.html">Equipo</a></li>
+                        <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
+                        <li><a href="prensa.html">Prensa</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Recursos</h3>
                     <ul>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Guías</a></li>
+                        <li><a href="#">Guías de aprendizaje</a></li>
+                        <li><a href="#">Webinars</a></li>
+                        <li><a href="#">Foro</a></li>
+                    </ul>
+                </div>
+                <div id="soporte" class="footer-column">
+                    <h3>Soporte</h3>
+                    <ul>
+                        <li><a href="#">Centro de ayuda</a></li>
+                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#">Términos y condiciones</a></li>
+                        <li><a href="#">Política de privacidad</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Síguenos</h3>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     </ul>
                 </div>
             </div>
