--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
                 <div class="footer-column">
                     <h3>Sobre nosotros</h3>
                     <ul>
-                        <li><a href="#">Nuestra misión</a></li>
-                        <li><a href="#">Equipo</a></li>
-                        <li><a href="#">Trabaja con nosotros</a></li>
-                        <li><a href="#">Prensa</a></li>
+                        <li><a href="nuestra-mision.html">Nuestra misión</a></li>
+                        <li><a href="equipo.html">Equipo</a></li>
+                        <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
+                        <li><a href="prensa.html">Prensa</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
