--- a/foro.html
+++ b/foro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestra Misión - EstudiaYa</title>
+    <title>Foro de la Comunidad - EstudiaYa</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/static-page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,19 +34,14 @@
 
     <main class="static-page">
         <div class="container">
-            <h1 class="section-title">Nuestra Misión</h1>
+            <h1 class="section-title">Foro de la Comunidad</h1>
             <div class="static-content">
-                <p>En EstudiaYa, nuestra misión es democratizar el acceso a la educación de alta calidad, permitiendo que cualquier persona, sin importar su ubicación o sus recursos, pueda desarrollar nuevas habilidades, impulsar su carrera profesional y alcanzar su máximo potencial.</p>
-                <p>Creemos firmemente en el poder del aprendizaje continuo como motor de cambio personal y social. Por eso, nos esforzamos en crear una plataforma intuitiva, accesible y enriquecedora, que conecte a estudiantes apasionados con los mejores instructores y el contenido más relevante del mercado.</p>
-                
-                <h2>Nuestros Valores</h2>
-                <ul>
-                    <li><strong>Calidad:</strong> Nos comprometemos a ofrecer cursos y carreras con contenido riguroso, actualizado y práctico, diseñado por expertos en cada industria.</li>
-                    <li><strong>Accesibilidad:</strong> Queremos eliminar las barreras al aprendizaje. Nuestra plataforma está diseñada para ser fácil de usar y nuestros precios son competitivos para llegar a la mayor cantidad de personas.</li>
-                    <li><strong>Comunidad:</strong> Fomentamos un entorno de aprendizaje colaborativo donde estudiantes, instructores y exalumnos pueden conectar, compartir conocimientos y crecer juntos.</li>
-                    <li><strong>Innovación:</strong> Estamos en constante búsqueda de nuevas tecnologías y metodologías pedagógicas para mejorar la experiencia de aprendizaje y mantener nuestra oferta a la vanguardia.</li>
-                </ul>
-                <p>Aspiramos a ser el compañero de confianza en el viaje educativo de millones de personas en todo el mundo, ayudándoles a construir el futuro que desean.</p>
+                <p>¡Bienvenido al corazón de EstudiaYa! Nuestro foro es el punto de encuentro para estudiantes, instructores y entusiastas del aprendizaje. Aquí puedes resolver dudas, compartir tus proyectos, pedir feedback y conectar con personas que comparten tus intereses.</p>
+                <p>El conocimiento se construye en comunidad. Participa en las conversaciones, ayuda a otros y enriquece tu propio viaje de aprendizaje.</p>
+                <p style="text-align: center; margin-top: 2rem;">
+                    <a href="#" class="btn btn-primary">Ir al Foro</a>
+                </p>
+                <p class="text-center" style="margin-top:1rem; color: #888;">(Próximamente disponible)</p>
             </div>
         </div>
     </main>
