--- a/webinars.html
+++ b/webinars.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestra Misión - EstudiaYa</title>
+    <title>Webinars - EstudiaYa</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/static-page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,19 +34,11 @@
 
     <main class="static-page">
         <div class="container">
-            <h1 class="section-title">Nuestra Misión</h1>
+            <h1 class="section-title">Webinars</h1>
             <div class="static-content">
-                <p>En EstudiaYa, nuestra misión es democratizar el acceso a la educación de alta calidad, permitiendo que cualquier persona, sin importar su ubicación o sus recursos, pueda desarrollar nuevas habilidades, impulsar su carrera profesional y alcanzar su máximo potencial.</p>
-                <p>Creemos firmemente en el poder del aprendizaje continuo como motor de cambio personal y social. Por eso, nos esforzamos en crear una plataforma intuitiva, accesible y enriquecedora, que conecte a estudiantes apasionados con los mejores instructores y el contenido más relevante del mercado.</p>
-                
-                <h2>Nuestros Valores</h2>
-                <ul>
-                    <li><strong>Calidad:</strong> Nos comprometemos a ofrecer cursos y carreras con contenido riguroso, actualizado y práctico, diseñado por expertos en cada industria.</li>
-                    <li><strong>Accesibilidad:</strong> Queremos eliminar las barreras al aprendizaje. Nuestra plataforma está diseñada para ser fácil de usar y nuestros precios son competitivos para llegar a la mayor cantidad de personas.</li>
-                    <li><strong>Comunidad:</strong> Fomentamos un entorno de aprendizaje colaborativo donde estudiantes, instructores y exalumnos pueden conectar, compartir conocimientos y crecer juntos.</li>
-                    <li><strong>Innovación:</strong> Estamos en constante búsqueda de nuevas tecnologías y metodologías pedagógicas para mejorar la experiencia de aprendizaje y mantener nuestra oferta a la vanguardia.</li>
-                </ul>
-                <p>Aspiramos a ser el compañero de confianza en el viaje educativo de millones de personas en todo el mundo, ayudándoles a construir el futuro que desean.</p>
+                <p>Participa en nuestras clases en vivo y sesiones de preguntas y respuestas con los mejores expertos de la industria. Los webinars son una oportunidad única para aprender sobre las últimas tendencias, resolver tus dudas en tiempo real y conocer a fondo a nuestros instructores.</p>
+                <p>Consulta nuestro calendario para ver los próximos eventos y regístrate gratis. Si te perdiste alguno, no te preocupes, podrás encontrar las grabaciones aquí.</p>
+                <p>¡Próximamente anunciaremos nuestro primer ciclo de webinars!</p>
             </div>
         </div>
     </main>
