--- a/carreras-catalogo.html
+++ b/carreras-catalogo.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html#cursos">Cursos</a></li>
                     <li><a href="carreras.html">Carreras</a></li>
                     <li><a href="index.html#testimonios">Testimonios</a></li>
-                    <li><a href="index.html#blog">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
             <div class="auth-buttons">
@@ -62,10 +62,10 @@
                 <div class="footer-column">
                     <h3>Recursos</h3>
                     <ul>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Guías de aprendizaje</a></li>
-                        <li><a href="#">Webinars</a></li>
-                        <li><a href="#">Foro</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="guias-aprendizaje.html">Guías de aprendizaje</a></li>
+                        <li><a href="webinars.html">Webinars</a></li>
+                        <li><a href="foro.html">Foro</a></li>
                     </ul>
                 </div>
                 <div id="soporte" class="footer-column">
