feat: Crear páginas de soporte (Ayuda, Contacto, Legales)

--- a/centro-ayuda.html
+++ b/centro-ayuda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webinars - EstudiaYa</title>
+    <title>Centro de Ayuda - EstudiaYa</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/static-page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,11 +34,19 @@
 
     <main class="static-page">
         <div class="container">
-            <h1 class="section-title">Webinars</h1>
+            <h1 class="section-title">Centro de Ayuda</h1>
             <div class="static-content">
-                <p>Participa en nuestras clases en vivo y sesiones de preguntas y respuestas con los mejores expertos de la industria. Los webinars son una oportunidad única para aprender sobre las últimas tendencias, resolver tus dudas en tiempo real y conocer a fondo a nuestros instructores.</p>
-                <p>Consulta nuestro calendario para ver los próximos eventos y regístrate gratis. Si te perdiste alguno, no te preocupes, podrás encontrar las grabaciones aquí.</p>
-                <p>¡Próximamente anunciaremos nuestro primer ciclo de webinars!</p>
+                <p>Encuentra respuestas a las preguntas más comunes sobre nuestra plataforma, cursos y pagos. Si no encuentras lo que buscas, no dudes en <a href="contacto.html">contactarnos</a>.</p>
+                
+                <h2>Preguntas Frecuentes</h2>
+
+                <h3>Sobre los Cursos</h3>
+                <p><strong>¿Tengo acceso de por vida a los cursos que compro?</strong><br>Sí, una vez que compras un curso, tienes acceso ilimitado a su contenido para siempre, incluyendo todas las futuras actualizaciones.</p>
+                <p><strong>¿Recibiré un certificado al finalizar?</strong><br>Sí, todos nuestros cursos y carreras ofrecen un certificado de finalización que puedes añadir a tu perfil de LinkedIn y a tu CV.</p>
+
+                <h3>Pagos y Reembolsos</h3>
+                <p><strong>¿Qué métodos de pago aceptan?</strong><br>Aceptamos las principales tarjetas de crédito y débito (Visa, MasterCard, American Express) y PayPal.</p>
+                <p><strong>¿Cuál es su política de reembolso?</strong><br>Ofrecemos una garantía de devolución de 30 días. Si no estás satisfecho con un curso, puedes solicitar un reembolso completo dentro de los primeros 30 días de la compra.</p>
             </div>
         </div>
     </main>
