--- a/guias-aprendizaje.html
+++ b/guias-aprendizaje.html
@@ -68,10 +68,10 @@
                 <div id="soporte" class="footer-column">
                     <h3>Soporte</h3>
                     <ul>
-                        <li><a href="#">Centro de ayuda</a></li>
-                        <li><a href="#">Contacto</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">Política de privacidad</a></li>
+                        <li><a href="centro-ayuda.html">Centro de ayuda</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="terminos-condiciones.html">Términos y condiciones</a></li>
+                        <li><a href="politica-privacidad.html">Política de privacidad</a></li>
                     </ul>
                 </div>
             </div>
