--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webinars - EstudiaYa</title>
+    <title>Política de Privacidad - EstudiaYa</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/static-page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,11 +34,18 @@
 
     <main class="static-page">
         <div class="container">
-            <h1 class="section-title">Webinars</h1>
+            <h1 class="section-title">Política de Privacidad</h1>
             <div class="static-content">
-                <p>Participa en nuestras clases en vivo y sesiones de preguntas y respuestas con los mejores expertos de la industria. Los webinars son una oportunidad única para aprender sobre las últimas tendencias, resolver tus dudas en tiempo real y conocer a fondo a nuestros instructores.</p>
-                <p>Consulta nuestro calendario para ver los próximos eventos y regístrate gratis. Si te perdiste alguno, no te preocupes, podrás encontrar las grabaciones aquí.</p>
-                <p>¡Próximamente anunciaremos nuestro primer ciclo de webinars!</p>
+                <p><em>Última actualización: [Fecha]</em></p>
+                <p>En EstudiaYa, respetamos tu privacidad y nos comprometemos a proteger tus datos personales. Esta política de privacidad te informará sobre cómo cuidamos tus datos personales cuando visitas nuestro sitio web y te informará sobre tus derechos de privacidad y cómo la ley te protege.</p>
+
+                <h2>1. Información que recopilamos</h2>
+                <p>Podemos recopilar, usar, almacenar y transferir diferentes tipos de datos personales sobre ti, que hemos agrupado de la siguiente manera: datos de identidad, datos de contacto, datos financieros, datos de transacciones, datos técnicos, etc.</p>
+
+                <h2>2. Cómo usamos tus datos personales</h2>
+                <p>Usaremos tus datos personales solo cuando la ley nos lo permita. Generalmente, usaremos tus datos personales en las siguientes circunstancias: para registrarte como nuevo cliente, para procesar y entregar tu pedido, para gestionar nuestra relación contigo, etc.</p>
+
+                <p>[...] Aquí continuarías con el resto de las cláusulas legales.</p>
             </div>
         </div>
     </main>
