--- a/terminos-condiciones.html
+++ b/terminos-condiciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webinars - EstudiaYa</title>
+    <title>Términos y Condiciones - EstudiaYa</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/static-page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,11 +34,21 @@
 
     <main class="static-page">
         <div class="container">
-            <h1 class="section-title">Webinars</h1>
+            <h1 class="section-title">Términos y Condiciones</h1>
             <div class="static-content">
-                <p>Participa en nuestras clases en vivo y sesiones de preguntas y respuestas con los mejores expertos de la industria. Los webinars son una oportunidad única para aprender sobre las últimas tendencias, resolver tus dudas en tiempo real y conocer a fondo a nuestros instructores.</p>
-                <p>Consulta nuestro calendario para ver los próximos eventos y regístrate gratis. Si te perdiste alguno, no te preocupes, podrás encontrar las grabaciones aquí.</p>
-                <p>¡Próximamente anunciaremos nuestro primer ciclo de webinars!</p>
+                <p><em>Última actualización: [Fecha]</em></p>
+                <p>Bienvenido a EstudiaYa. Al acceder y utilizar nuestra plataforma, aceptas cumplir con los siguientes términos y condiciones. Por favor, léelos atentamente.</p>
+                
+                <h2>1. Uso de la Plataforma</h2>
+                <p>Te comprometes a utilizar EstudiaYa solo para fines lícitos y de una manera que no infrinja los derechos de, restrinja o inhiba el uso y disfrute de este sitio por parte de terceros.</p>
+
+                <h2>2. Cuentas de Usuario</h2>
+                <p>Eres responsable de mantener la confidencialidad de tu cuenta y contraseña y de restringir el acceso a tu computadora. Aceptas la responsabilidad de todas las actividades que ocurran bajo tu cuenta o contraseña.</p>
+
+                <h2>3. Propiedad Intelectual</h2>
+                <p>Todo el contenido incluido en el sitio, como texto, gráficos, logos, imágenes, así como la compilación del mismo, es propiedad de EstudiaYa o de sus proveedores de contenido y está protegido por las leyes de derechos de autor.</p>
+
+                <p>[...] Aquí continuarías con el resto de las cláusulas legales.</p>
             </div>
         </div>
     </main>
