--- a/contacto.html
+++ b/contacto.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - EstudiaYa</title>
+    <title>Contacto - EstudiaYa</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/blog.css">
+    <link rel="stylesheet" href="assets/css/static-page.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
@@ -32,52 +33,37 @@
         </div>
     </header>
 
-    <main class="blog-page">
+    <main class="static-page">
         <div class="container">
-            <h1 class="section-title">Nuestro Blog</h1>
-            <p class="section-subtitle">Consejos, tutoriales y noticias del mundo del aprendizaje en línea.</p>
+            <h1 class="section-title">Contacto</h1>
+            <div class="static-content">
+                <p>¿Tienes alguna pregunta, sugerencia o problema? Estamos aquí para ayudarte. Rellena el formulario y nuestro equipo se pondrá en contacto contigo lo antes posible.</p>
+                
+                <form class="contact-form" name="contact" netlify>
+                    <div class="form-group">
+                        <label for="name">Nombre</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Correo Electrónico</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Asunto</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Mensaje</label>
+                        <textarea id="message" name="message" rows="6" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+                </form>
 
-            <div class="blog-grid">
-                <!-- Post 1 -->
-                <div class="blog-card">
-                    <a href="#" class="blog-card-image" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?q=80&w=2070&auto=format&fit=crop');"></a>
-                    <div class="blog-card-content">
-                        <a href="#" class="blog-category">Productividad</a>
-                        <h3 class="blog-title"><a href="#">7 técnicas de estudio para aprender más rápido</a></h3>
-                        <p class="blog-excerpt">Descubre métodos probados científicamente para mejorar tu retención y aprovechar al máximo tus horas de estudio.</p>
-                        <div class="blog-author">
-                            <img src="https://picsum.photos/seed/author1/40/40" alt="Autor">
-                            <span>Ana García</span>
-                        </div>
-                    </div>
+                <div class="contact-info">
+                    <h3>Otras formas de contactar</h3>
+                    <p><strong>Email:</strong> <a href="mailto:soporte@estudiaya.com">soporte@estudiaya.com</a></p>
+                    <p>También puedes visitar nuestro <a href="centro-ayuda.html">Centro de Ayuda</a> para respuestas inmediatas.</p>
                 </div>
-                <!-- Post 2 -->
-                <div class="blog-card">
-                    <a href="#" class="blog-card-image" style="background-image: url('https://images.unsplash.com/photo-1611095562057-2e7012892e3c?q=80&w=2070&auto=format&fit=crop');"></a>
-                    <div class="blog-card-content">
-                        <a href="#" class="blog-category">Carrera</a>
-                        <h3 class="blog-title"><a href="#">Cómo construir un portafolio que impresione a los reclutadores</a></h3>
-                        <p class="blog-excerpt">Tu portafolio es tu mejor carta de presentación. Te mostramos qué incluir y cómo estructurarlo para destacar.</p>
-                        <div class="blog-author">
-                            <img src="https://picsum.photos/seed/author2/40/40" alt="Autor">
-                            <span>Luis Hernandez</span>
-                        </div>
-                    </div>
-                </div>
-                <!-- Post 3 -->
-                <div class="blog-card">
-                    <a href="#" class="blog-card-image" style="background-image: url('https://images.unsplash.com/photo-1674027444485-cec3da58eef4?q=80&w=1932&auto=format&fit=crop');"></a>
-                    <div class="blog-card-content">
-                        <a href="#" class="blog-category">Tecnología</a>
-                        <h3 class="blog-title"><a href="#">Introducción a la Inteligencia Artificial Generativa</a></h3>
-                        <p class="blog-excerpt">¿Qué es la IA Generativa y por qué está en boca de todos? Te lo explicamos de forma sencilla y con ejemplos prácticos.</p>
-                        <div class="blog-author">
-                            <img src="https://picsum.photos/seed/author3/40/40" alt="Autor">
-                            <span>Carla Rossi</span>
-                        </div>
-                    </div>
-                </div>
-                <!-- Puedes añadir más posts aquí -->
             </div>
         </div>
     </main>
